# 2023-raspberry-study

./: .gitignore  README.md
file/: file_control.c  file_library.c  file_stdio.c  file_syscall.c
gpio/: button_read.c  gpio.h  gpio_project.c  led_write.c
project/: CMakeLists.txt
project/include/: spi.c  spi.h
pwm/: buzer_write.c  pwm.h  pwm_project.c
socket/: socket.c
spi/: spi.h  water_read.c
thread/: fork_create.c  fork_work.c  thread_create.c  thread_work.c
w1/: temp_read.c
wiringpi/: lcd.c  lcd.h
